# graph-visualizer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: cmake-multi-platform.yml  codeql.yml  doxygen-pages.yml  makefile.yml
backend/: Makefile
backend/include/: cli.h  graph.h  render.h  shader.h
backend/src/: circles.cpp  cli.cpp  graph.cpp  index.html  main.cpp  render.cpp  shader.cpp  triangle.cpp
graph-visualizer/src/: Makefile  index.html  triangle.js  triangle.wasm
include/controller/: mouse.h  view.h
include/model/: a_star_algorithm.h  bellman_ford_algorithm.h  bfs_algorithm.h  dfs_algorithm.h  dijkstra_algorithm.h  directed_graph.h  graph.h  graph_algorithm.h  graph_node.h  graph_physics.h  undirected_graph.h
include/view/: algorithm_state.h  graph_state.h  menu_state.h  ui_button.h  ui_element.h  ui_label.h  ui_state.h
include/web/: app.h  background.h  notifications.h  renderer.h  text.h
project-name/: Makefile
project-name/include/: include.h
project-name/src/: CMakeLists.txt
src/: background.cpp  index.html  main.cpp
src/controller/: mouse.cpp  view.cpp
src/model/: a_star_algorithm.cpp  bellman_ford_algorithm.cpp  bfs_algorithm.cpp  dfs_algorithm.cpp  dijkstra_algorithm.cpp  directed_graph.cpp  graph.cpp  graph_algorithm.cpp  graph_node.cpp  graph_physics.cpp  undirected_graph.cpp
src/view/: algorithm_state.cpp  graph_state.cpp  menu_state.cpp  ui_button.cpp  ui_element.cpp  ui_label.cpp  ui_state.cpp
src/web/: app.cpp  background.cpp  canvas.cpp  notifications.cpp  renderer.cpp  text.cpp
(+1 files in other folders)
